--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
 		"jquery.filthypillow.css"
 	],
   "description": "A small and fancy calendar/date-time picker with tests",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "homepage": "https://github.com/aef-/jquery.filthypillow",
   "authors": [
     "aef <aef@catch-colt.com>"
@@ -23,6 +23,6 @@
     "test",
     "tests",
     "*.json",
-    "*.nuspec",
+    "*.nuspec"
   ]
 }
