--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jquery.filthypillow",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A fancy and small calendar and date-time picker.",
   "main": "./jquery.filthypillow.js",
   "directories": {
@@ -14,13 +14,13 @@
   "bugs": {
     "url": "https://github.com/aef-/jquery.filthypillow/issues"
   },
-	"files": {
+	"files": [
 		"jquery.filthypillow.js",
 		"jquery.filthypillow.css",
-		"README.md",
-	},
+		"README.md"
+	],
 	"keywords": [ "calendar", "datetime", "time", "datepicker", "timepicker", "datetimepicker" ],
-  "homepage": "https://github.com/aef-/jquery.filthypillow"
+  "homepage": "https://github.com/aef-/jquery.filthypillow",
 	"jam": {
 		"dependencies": {
 			"jquery": ">=1.9.1",
